# mender

./: .gitignore  Makefile  go.mod  go.sum  main.cmake  vcpkg.json
cmake/: build_mode.cmake  windows_platform.cmake
src/: CMakeLists.txt
src/artifact/: token.hpp
src/artifact/tar/platform/libarchive/: wrapper.hpp
src/artifact/v3/header/: token.hpp
src/artifact/v3/scripts/: executor.cpp  executor.hpp
src/client_shared/: conf.hpp
src/client_shared/inventory_parser/platform/c++17/: inventory_parser.cpp
src/common/: CMakeLists.txt  events_io.hpp  json.hpp  setup.hpp
src/common/crypto/platform/openssl/: crypto.cpp
src/common/events/platform/windows/: events_io.cpp
src/common/http/: http.cpp
src/common/io/: io.cpp
src/common/io/platform/windows/: io.cpp
src/common/key_value_parser/: key_value_parser.cpp
src/common/path/: path.cpp
src/common/path/platform/c++17/: path.cpp
src/common/path/platform/windows/: path.cpp
src/common/processes/platform/tiny_process_library/: tiny_process_library.cpp
src/common/setup/platform/posix/: setup.cpp
src/common/setup/platform/windows/: setup.cpp
src/mender-update/: CMakeLists.txt  main.cpp
src/mender-update/cli/: actions.cpp
src/mender-update/daemon/: state_machine.hpp
src/mender-update/daemon/state_machine/: state_machine.cpp
src/mender-update/daemon/state_machine/platform/posix/: signal_handling.cpp
src/mender-update/daemon/state_machine/platform/windows/: signal_handling.cpp
src/mender-update/update_module/v3/: update_module.cpp
src/mender-update/update_module/v3/platform/c++17/: fs_operations.cpp  update_module_call.cpp
support/modules-artifact-gen-windows/: README.md  single-file-artifact-gen-win.cmd  single-file-artifact-gen-win.ps1
support/modules-windows/: README.md  single-file-win.cmd  single-file-win.ps1
support/windows/: README.md
support/windows/identity/: mender-device-identity.cmd
support/windows/inventory/: mender-inventory-device-type.cmd  mender-inventory-hardware.cmd  mender-inventory-network.cmd  mender-inventory-os.cmd  mender-inventory-provides.cmd  mender-inventory-update-modules.cmd
support/windows/service/: install-service.cmd  install-service.ps1  uninstall-service.cmd  uninstall-service.ps1
